syntax = "proto3";
/*proto file is the contract between client and server.
It describes both the structure of the data and the
remote procedure calls (RPCs) they use to communicate.
 */
option go_package ="project-root/grpc;proto";

//Region content of messages
//empty message for when no user input is required. Used for join- and leave requests
/*message Message{
  string body = 1;
}*/

message Empty{}

message ChatMessage{
  string sender = 1;
  string body = 2;
  int64 logicalTime = 3;
}

//message for when a new user joins the chat
message JoinRequest{
  string username = 1;
}

//message for when a user leaves the chat
message LeaveRequest{
  string username = 1;
}
//message for clients to publish a new chat message
message PublishRequest{
  string sender = 1;
  string body = 2;
}


//the gRPC service for ChitChat. This is the contract that allows each client to call the methods included in this service:
service ChitChatService{
  //rpc SayHello (Message) returns (Message) {}
  rpc Join(JoinRequest) returns (stream ChatMessage) {}
  rpc Publish(PublishRequest) returns (Empty) {}
  rpc Leave(LeaveRequest) returns (Empty) {}
}